force-app/main/default/objects/CheckListScope__c/CheckListScope__c.object-meta.xml
<CustomObject>
    <label>CheckList Scope</label>
    <nameField>
        <displayFormat>CS-{00000000}</displayFormat>
        <label>Check List Scope Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CheckList Scopes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>