force-app/main/default/objects/CheckListScope__c/fields/CheckItem__c.field-meta.xml
<CustomField>
    <fullName>CheckItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Check Item</label>
    <referenceTo>CheckItem__c</referenceTo>
    <relationshipLabel>CheckList Scopes</relationshipLabel>
    <relationshipName>CheckList_Scopes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>