force-app/main/default/objects/CheckListScope__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <formula>TEXT(CheckItem__r.Product_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Line</label>
    <type>Text</type>
</CustomField>