force-app/main/default/objects/CheckListScope__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Floorwalker</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>