force-app/main/default/objects/CheckListScope__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Shop__c</referenceTo>
    <relationshipLabel>CheckList Scopes</relationshipLabel>
    <relationshipName>CheckList_Scopes</relationshipName>
    <type>Lookup</type>
</CustomField>