force-app/main/default/objects/CheckListScope__c/recordTypes/Chile.recordType-meta.xml
<RecordType>
    <fullName>Chile</fullName>
    <active>true</active>
    <label>Chile</label>
</RecordType>