force-app/main/default/objects/CheckListScope__c/recordTypes/Columbia.recordType-meta.xml
<RecordType>
    <fullName>Columbia</fullName>
    <active>true</active>
    <label>Columbia</label>
</RecordType>