force-app/main/default/objects/CheckListScope__c/recordTypes/Indonesia.recordType-meta.xml
<RecordType>
    <fullName>Indonesia</fullName>
    <active>true</active>
    <label>Indonesia</label>
</RecordType>