force-app/main/default/objects/CheckListScope__c/recordTypes/Saudi.recordType-meta.xml
<RecordType>
    <fullName>Saudi</fullName>
    <active>true</active>
    <label>Saudi</label>
</RecordType>