force-app/main/default/objects/CheckListScope__c/recordTypes/Vietnam.recordType-meta.xml
<RecordType>
    <fullName>Vietnam</fullName>
    <active>true</active>
    <label>Vietnam</label>
</RecordType>