force-app/main/default/objects/CheckListScope__c/recordTypes/West_Africa.recordType-meta.xml
<RecordType>
    <fullName>West_Africa</fullName>
    <active>true</active>
    <label>West Africa</label>
</RecordType>