force-app/main/default/objects/CheckListScope__c/validationRules/Check_Item_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Item_Rule</fullName>
    <active>true</active>
    <description>只有状态为Active的Check Item才能被使用</description>
    <errorConditionFormula>NOT( CheckItem__r.Active__c )</errorConditionFormula>
    <errorMessage>Check Item must be Active!</errorMessage>
</ValidationRule>