force-app/main/default/objects/CheckListScope__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CheckItem__c</columns>
    <columns>Active__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>Project__c</columns>
    <columns>Check_Item_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>